--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GS1 DataBar 医療用ツール</title>
+<title>GS1 医療在庫ツール</title>
 
 <script type="module">
-import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.4/+esm";
+import {
+  BrowserMultiFormatReader,
+  BarcodeFormat,
+  DecodeHintType
+} from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.4/+esm";
 
-const reader = new BrowserMultiFormatReader();
+const hints = new Map();
+hints.set(DecodeHintType.POSSIBLE_FORMATS, [
+  BarcodeFormat.CODE_128,
+  BarcodeFormat.EAN_13,
+  BarcodeFormat.EAN_8,
+  BarcodeFormat.UPC_A,
+  BarcodeFormat.UPC_E,
+  BarcodeFormat.ITF,
+  BarcodeFormat.CODABAR,
+  BarcodeFormat.DATA_MATRIX,
+  BarcodeFormat.QR_CODE,
+  BarcodeFormat.RSS_14,
+  BarcodeFormat.RSS_EXPANDED
+]);
+
+const reader = new BrowserMultiFormatReader(hints);
+
+let controls = null;
 let cameraActive = false;
 let db = JSON.parse(localStorage.getItem("gs1db") || "[]");
 
@@ -41,27 +62,42 @@ function formatExpiry(e){
   return "20"+e.slice(0,2)+"-"+e.slice(2,4)+"-"+e.slice(4,6);
 }
 
+function stopCamera(){
+  if(controls){
+    controls.stop();
+    controls = null;
+  }
+  cameraActive=false;
+  cameraBtn.innerText="カメラ ON";
+  video.style.display="none";
+}
+
 function handleScan(text){
+
   const parsed=parseGS1(text);
 
   if(!parsed.gtin || !parsed.expiry){
-    alert("医療用GS1 (01)+(17) を含むバーコードではありません。");
-    return;
+    output.innerHTML="⚠ 医療用GS1ではありません";
+    return; // 停止しない
   }
 
   if(!validDateYYMMDD(parsed.expiry)){
-    alert("有効期限フォーマット不正（YYMMDD）");
+    output.innerHTML="⚠ 有効期限フォーマット不正";
     return;
   }
 
+  // ✅ 正常GS1のみ停止
+  stopCamera();
+
   const gtin=parsed.gtin;
   const expiry=formatExpiry(parsed.expiry);
-  const mode=document.getElementById("modeSelect").value;
+  const mode=modeSelect.value;
 
   if(mode==="save"){
     db.push({gtin,expiry});
     saveDB();
-    output.innerHTML=`保存完了<br>GTIN: ${gtin}<br>期限: ${expiry}`;
+    output.innerHTML=
+      "✅ 保存完了<br>GTIN: "+gtin+"<br>期限: "+expiry;
   }
 
   if(mode==="search"){
@@ -72,10 +108,10 @@ function handleScan(text){
     }
     let earliest=matches.reduce((a,b)=>a.expiry<b.expiry?a:b);
     output.innerHTML=
-      `該当件数: ${matches.length}<br>
-       最短期限: ${earliest.expiry}<br><br>
-       <button class="danger" onclick="deleteCurrent('${gtin}','${expiry}')">
-       今読んだ期限を削除</button>`;
+      "該当件数: "+matches.length+"<br>"+
+      "最短期限: "+earliest.expiry+"<br><br>"+
+      "<button class='danger' onclick='deleteCurrent(\""+gtin+"\",\""+expiry+"\")'>"+
+      "今読んだ期限を削除</button>";
   }
 }
 
@@ -90,12 +126,12 @@ window.deleteCurrent=function(gtin,expiry){
   }
 }
 
-window.startCamera=function(){
+window.startCamera=async function(){
   cameraActive=true;
-  document.getElementById("cameraBtn").innerText="カメラ OFF";
-  document.getElementById("video").style.display="block";
+  cameraBtn.innerText="カメラ OFF";
+  video.style.display="block";
 
-  reader.decodeFromVideoDevice(
+  controls = await reader.decodeFromVideoDevice(
     undefined,
     "video",
     (result,err)=>{
@@ -104,13 +140,6 @@ window.startCamera=function(){
       }
     }
   );
-}
-
-window.stopCamera=function(){
-  reader.reset();
-  cameraActive=false;
-  document.getElementById("cameraBtn").innerText="カメラ ON";
-  document.getElementById("video").style.display="none";
 }
 
 window.toggleCamera=function(){
@@ -160,7 +189,7 @@ video{
 <div class="container">
 <div class="card">
 
-<h2>GS1 DataBar 医療用ツール</h2>
+<h2>GS1 医療在庫ツール</h2>
 
 <select id="modeSelect">
 <option value="save">データ保存モード</option>
