--- a/index.html
+++ b/index.html
@@ -1,126 +1,228 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GS1 医療在庫ツール</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>医療GS1在庫管理テスト</title>
+
+<style>
+body{
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
+  margin:0;
+  background:#f4f6f9;
+  display:flex;
+  justify-content:center;
+}
+.container{
+  max-width:600px;
+  width:100%;
+  padding:20px;
+}
+h1{
+  text-align:center;
+}
+.card{
+  background:white;
+  padding:20px;
+  border-radius:12px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.08);
+  margin-bottom:20px;
+}
+button{
+  padding:10px 14px;
+  border:none;
+  border-radius:8px;
+  margin:5px 0;
+  font-size:14px;
+  cursor:pointer;
+}
+.primary{ background:#007aff; color:white; }
+.danger{ background:#ff3b30; color:white; }
+.gray{ background:#ddd; }
+
+video{
+  width:100%;
+  border-radius:12px;
+  margin-top:10px;
+  background:black;
+}
+.result{
+  margin-top:10px;
+  font-size:14px;
+  word-break:break-all;
+}
+.status{
+  margin-top:8px;
+  font-weight:bold;
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+<h1>医療GS1 在庫テスト</h1>
+
+<div class="card">
+<label>
+<input type="radio" name="mode" value="save" checked>
+データ保存モード
+</label>
+<label>
+<input type="radio" name="mode" value="search">
+検索モード
+</label>
+<br>
+<button class="primary" onclick="toggleCamera()">カメラ ON / OFF</button>
+
+<video id="video" muted playsinline></video>
+
+<div class="status" id="status"></div>
+<div class="result" id="result"></div>
+</div>
+</div>
 
 <script type="module">
 import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.4/+esm";
 
-let reader = null;
+let codeReader = new BrowserMultiFormatReader();
 let controls = null;
-let currentDeviceId = null;
+let isCameraOn = false;
 
-window.startCamera = async function () {
-  reader = new BrowserMultiFormatReader();
+const videoElement = document.getElementById("video");
+const resultEl = document.getElementById("result");
+const statusEl = document.getElementById("status");
 
-  const devices = await BrowserMultiFormatReader.listVideoInputDevices();
-  currentDeviceId = devices[0]?.deviceId;
+window.toggleCamera = async function(){
 
-  controls = await reader.decodeFromVideoDevice(
-    currentDeviceId,
-    'video',
-    (result, err) => {
-      if (result) {
-        const text = result.getText();
-        handleScan(text);
+  if(isCameraOn){
+    stopCamera();
+    return;
+  }
+
+  try{
+    statusEl.innerText = "カメラ起動中...";
+    const devices = await BrowserMultiFormatReader.listVideoInputDevices();
+    const deviceId = devices[0]?.deviceId;
+
+    controls = await codeReader.decodeFromVideoDevice(
+      deviceId,
+      videoElement,
+      (result, err) => {
+        if(result){
+          handleScan(result.getText());
+        }
       }
-    }
-  );
-};
+    );
 
-window.stopCamera = function () {
-  if (controls) {
+    isCameraOn = true;
+    statusEl.innerText = "スキャン待機中";
+  }
+  catch(e){
+    alert("カメラ起動失敗：" + e);
+  }
+}
+
+function stopCamera(){
+  if(controls){
     controls.stop();
     controls = null;
   }
-};
+  videoElement.srcObject = null;
+  isCameraOn = false;
+  statusEl.innerText = "カメラ停止中";
+}
 
-window.toggleCamera = function () {
-  if (controls) {
-    stopCamera();
-  } else {
-    startCamera();
-  }
-};
+function handleScan(text){
 
-function handleScan(text) {
-  console.log("読み取り:", text);
+  resultEl.innerText = text;
 
-  // GS1判定
-  if (isMedicalGS1(text)) {
-    alert("医療用GS1コードです\n" + text);
-    stopCamera(); // 成功時自動停止
-  } else {
+  const parsed = parseGS1(text);
+
+  if(!parsed){
     alert("医療用GS1ではありません");
+    return;
+  }
+
+  stopCamera(); // 読み取り成功で自動停止
+
+  const mode = document.querySelector("input[name='mode']:checked").value;
+
+  if(mode === "save"){
+    saveData(parsed);
+  }else{
+    searchData(parsed);
   }
 }
 
-// 医療GS1判定ロジック
-function isMedicalGS1(text) {
-  return (
-    text.includes("(01)") &&
-    text.includes("(17)")
+function parseGS1(text){
+
+  // (01)14桁GTIN
+  const gtinMatch = text.match(/\(01\)(\d{14})/);
+  // (17)YYMMDD
+  const expMatch = text.match(/\(17\)(\d{6})/);
+
+  if(!gtinMatch || !expMatch){
+    return null;
+  }
+
+  const gtin = gtinMatch[1];
+  const expRaw = expMatch[1];
+
+  const year = "20" + expRaw.substring(0,2);
+  const month = expRaw.substring(2,4);
+  const day = expRaw.substring(4,6);
+  const expiry = `${year}-${month}-${day}`;
+
+  return { gtin, expiry };
+}
+
+function saveData(data){
+
+  let db = JSON.parse(localStorage.getItem("medicalDB") || "[]");
+
+  db.push(data);
+
+  localStorage.setItem("medicalDB", JSON.stringify(db));
+
+  alert("保存しました\n商品:"+data.gtin+"\n期限:"+data.expiry);
+}
+
+function searchData(data){
+
+  let db = JSON.parse(localStorage.getItem("medicalDB") || "[]");
+
+  const matches = db.filter(d => d.gtin === data.gtin);
+
+  if(matches.length === 0){
+    alert("該当データなし");
+    return;
+  }
+
+  const sorted = [...matches].sort((a,b)=> a.expiry.localeCompare(b.expiry));
+  const earliest = sorted[0];
+
+  const confirmDelete = confirm(
+    "最短期限: "+earliest.expiry+
+    "\n\n今回読んだ期限:"+data.expiry+
+    "\n\n今回読んだデータを削除しますか？"
   );
+
+  if(confirmDelete){
+    const index = db.findIndex(d =>
+      d.gtin === data.gtin &&
+      d.expiry === data.expiry
+    );
+
+    if(index !== -1){
+      db.splice(index,1);
+      localStorage.setItem("medicalDB", JSON.stringify(db));
+      alert("削除しました");
+    }else{
+      alert("一致データなし（新箱の可能性）");
+    }
+  }
 }
 </script>
 
-<style>
-body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#f4f6fb;
-  display:flex;
-  justify-content:center;
-  padding:20px;
-}
-.container{width:100%;max-width:520px;}
-.card{
-  background:#fff;
-  padding:20px;
-  border-radius:16px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.08);
-}
-select,button{
-  width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #ddd;
-  margin-top:10px;
-}
-button{
-  background:#2563eb;
-  color:#fff;
-  border:none;
-}
-button.danger{background:#dc2626;}
-video{
-  width:100%;
-  margin-top:15px;
-  border-radius:12px;
-}
-.result{margin-top:15px;}
-</style>
-</head>
-
-<body>
-<div class="container">
-<div class="card">
-
-<h2>GS1 医療在庫ツール</h2>
-
-<select id="modeSelect">
-<option value="save">データ保存モード</option>
-<option value="search">検索モード</option>
-</select>
-
-<button id="cameraBtn" onclick="toggleCamera()">カメラ ON</button>
-<video id="video" style="display:none;"></video>
-
-<div id="output" class="result"></div>
-
-</div>
-</div>
 </body>
 </html>
