--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>医療GS1在庫管理テスト</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>医療GS1在庫テスト</title>
 
 <style>
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   margin:0;
-  background:#f4f6f9;
-  display:flex;
-  justify-content:center;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
+  background:#f2f4f8;
 }
 .container{
   max-width:600px;
-  width:100%;
-  padding:20px;
-}
-h1{
-  text-align:center;
+  margin:auto;
+  padding:16px;
 }
 .card{
   background:white;
-  padding:20px;
-  border-radius:12px;
-  box-shadow:0 4px 12px rgba(0,0,0,0.08);
-  margin-bottom:20px;
+  padding:16px;
+  border-radius:16px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.08);
 }
-button{
-  padding:10px 14px;
-  border:none;
-  border-radius:8px;
-  margin:5px 0;
-  font-size:14px;
-  cursor:pointer;
-}
-.primary{ background:#007aff; color:white; }
-.danger{ background:#ff3b30; color:white; }
-.gray{ background:#ddd; }
-
 video{
   width:100%;
   border-radius:12px;
-  margin-top:10px;
   background:black;
 }
-.result{
-  margin-top:10px;
-  font-size:14px;
-  word-break:break-all;
+.scan-frame{
+  position:absolute;
+  top:50%;
+  left:50%;
+  width:60%;
+  height:120px;
+  transform:translate(-50%,-50%);
+  border:3px solid #00c853;
+  border-radius:12px;
+  pointer-events:none;
 }
+.video-wrapper{
+  position:relative;
+}
+button{
+  width:100%;
+  padding:12px;
+  margin-top:10px;
+  border:none;
+  border-radius:12px;
+  font-size:16px;
+}
+.primary{background:#007aff;color:white;}
+.danger{background:#ff3b30;color:white;}
 .status{
-  margin-top:8px;
+  margin-top:10px;
   font-weight:bold;
 }
 </style>
@@ -60,36 +60,35 @@ video{
 <body>
 
 <div class="container">
-<h1>医療GS1 在庫テスト</h1>
+<h2>医療GS1 在庫管理</h2>
 
 <div class="card">
-<label>
-<input type="radio" name="mode" value="save" checked>
-データ保存モード
-</label>
-<label>
-<input type="radio" name="mode" value="search">
-検索モード
-</label>
-<br>
+
+<label><input type="radio" name="mode" value="save" checked> 保存モード</label>
+<label><input type="radio" name="mode" value="search"> 検索モード</label>
+
+<div class="video-wrapper">
+<video id="video" playsinline></video>
+<div class="scan-frame"></div>
+</div>
+
 <button class="primary" onclick="toggleCamera()">カメラ ON / OFF</button>
 
-<video id="video" muted playsinline></video>
-
 <div class="status" id="status"></div>
-<div class="result" id="result"></div>
+
 </div>
 </div>
 
 <script type="module">
-import { BrowserMultiFormatReader } from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.4/+esm";
+import {
+  BrowserMultiFormatReader
+} from "https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.4/+esm";
 
-let codeReader = new BrowserMultiFormatReader();
+let reader = new BrowserMultiFormatReader();
 let controls = null;
 let isCameraOn = false;
 
-const videoElement = document.getElementById("video");
-const resultEl = document.getElementById("result");
+const video = document.getElementById("video");
 const statusEl = document.getElementById("status");
 
 window.toggleCamera = async function(){
@@ -100,14 +99,20 @@ window.toggleCamera = async function(){
   }
 
   try{
-    statusEl.innerText = "カメラ起動中...";
-    const devices = await BrowserMultiFormatReader.listVideoInputDevices();
-    const deviceId = devices[0]?.deviceId;
 
-    controls = await codeReader.decodeFromVideoDevice(
-      deviceId,
-      videoElement,
-      (result, err) => {
+    statusEl.innerText="カメラ起動中...";
+
+    controls = await reader.decodeFromConstraints(
+      {
+        audio:false,
+        video:{
+          facingMode:{ exact:"environment" }, // 外カメ固定
+          width:{ ideal:1280 },
+          height:{ ideal:720 }
+        }
+      },
+      video,
+      (result, err)=>{
         if(result){
           handleScan(result.getText());
         }
@@ -115,39 +120,51 @@ window.toggleCamera = async function(){
     );
 
     isCameraOn = true;
-    statusEl.innerText = "スキャン待機中";
+    statusEl.innerText="スキャン待機中（枠内にバーコード）";
+
+  }catch(e){
+    alert("外カメ取得失敗。内カメで再試行します。");
+    fallbackCamera();
   }
-  catch(e){
-    alert("カメラ起動失敗：" + e);
-  }
+};
+
+async function fallbackCamera(){
+  controls = await reader.decodeFromConstraints(
+    { video:true },
+    video,
+    (result, err)=>{
+      if(result){
+        handleScan(result.getText());
+      }
+    }
+  );
+  isCameraOn = true;
 }
 
 function stopCamera(){
   if(controls){
     controls.stop();
-    controls = null;
+    controls=null;
   }
-  videoElement.srcObject = null;
-  isCameraOn = false;
-  statusEl.innerText = "カメラ停止中";
+  video.srcObject=null;
+  isCameraOn=false;
+  statusEl.innerText="停止中";
 }
 
 function handleScan(text){
 
-  resultEl.innerText = text;
-
   const parsed = parseGS1(text);
 
   if(!parsed){
-    alert("医療用GS1ではありません");
+    alert("医療用GS1コードではありません");
     return;
   }
 
-  stopCamera(); // 読み取り成功で自動停止
+  stopCamera();
 
-  const mode = document.querySelector("input[name='mode']:checked").value;
+  const mode=document.querySelector("input[name='mode']:checked").value;
 
-  if(mode === "save"){
+  if(mode==="save"){
     saveData(parsed);
   }else{
     searchData(parsed);
@@ -156,69 +173,48 @@ function handleScan(text){
 
 function parseGS1(text){
 
-  // (01)14桁GTIN
-  const gtinMatch = text.match(/\(01\)(\d{14})/);
-  // (17)YYMMDD
-  const expMatch = text.match(/\(17\)(\d{6})/);
+  const gtin=text.match(/\(01\)(\d{14})/);
+  const exp=text.match(/\(17\)(\d{6})/);
 
-  if(!gtinMatch || !expMatch){
+  if(!gtin||!exp){
     return null;
   }
 
-  const gtin = gtinMatch[1];
-  const expRaw = expMatch[1];
+  const year="20"+exp[1].substring(0,2);
+  const month=exp[1].substring(2,4);
+  const day=exp[1].substring(4,6);
 
-  const year = "20" + expRaw.substring(0,2);
-  const month = expRaw.substring(2,4);
-  const day = expRaw.substring(4,6);
-  const expiry = `${year}-${month}-${day}`;
-
-  return { gtin, expiry };
+  return{
+    gtin:gtin[1],
+    expiry:`${year}-${month}-${day}`
+  };
 }
 
 function saveData(data){
-
-  let db = JSON.parse(localStorage.getItem("medicalDB") || "[]");
-
+  let db=JSON.parse(localStorage.getItem("medicalDB")||"[]");
   db.push(data);
-
-  localStorage.setItem("medicalDB", JSON.stringify(db));
-
-  alert("保存しました\n商品:"+data.gtin+"\n期限:"+data.expiry);
+  localStorage.setItem("medicalDB",JSON.stringify(db));
+  alert("保存完了\n"+data.gtin+"\n期限:"+data.expiry);
 }
 
 function searchData(data){
+  let db=JSON.parse(localStorage.getItem("medicalDB")||"[]");
+  const matches=db.filter(d=>d.gtin===data.gtin);
 
-  let db = JSON.parse(localStorage.getItem("medicalDB") || "[]");
-
-  const matches = db.filter(d => d.gtin === data.gtin);
-
-  if(matches.length === 0){
-    alert("該当データなし");
+  if(matches.length===0){
+    alert("該当なし");
     return;
   }
 
-  const sorted = [...matches].sort((a,b)=> a.expiry.localeCompare(b.expiry));
-  const earliest = sorted[0];
+  const sorted=[...matches].sort((a,b)=>a.expiry.localeCompare(b.expiry));
+  const earliest=sorted[0];
 
-  const confirmDelete = confirm(
-    "最短期限: "+earliest.expiry+
-    "\n\n今回読んだ期限:"+data.expiry+
-    "\n\n今回読んだデータを削除しますか？"
-  );
-
-  if(confirmDelete){
-    const index = db.findIndex(d =>
-      d.gtin === data.gtin &&
-      d.expiry === data.expiry
-    );
-
-    if(index !== -1){
-      db.splice(index,1);
-      localStorage.setItem("medicalDB", JSON.stringify(db));
+  if(confirm("最短期限:"+earliest.expiry+"\n今回:"+data.expiry+"\n削除しますか？")){
+    const idx=db.findIndex(d=>d.gtin===data.gtin&&d.expiry===data.expiry);
+    if(idx!==-1){
+      db.splice(idx,1);
+      localStorage.setItem("medicalDB",JSON.stringify(db));
       alert("削除しました");
-    }else{
-      alert("一致データなし（新箱の可能性）");
     }
   }
 }
